# centrifuge-cli

./: .travis.yml  LICENSE  README.md  README.rst  pyproject.toml
centrifuge_cli/: __init__.py  main.py  policy.py  stats.py
docs/: CCDS-IoT-Guidelines-2021-policy.yml  IoT-OWASP-Top10-policy.mustache  IoT-OWASP-Top10-policy.yml  POLICY.md  example-policy-lenient.yml  example-policy-report.mustache  example-policy-simple.yml  example-policy.yml  sarif-policy.yml
tests/: test_centrifuge_cli.py
