[tool.poetry]
name = "centrifuge-cli"
version = "0.6.1"
description = "A command line utility for interacting with the Centrifuge Firmware Analysis Platform's REST API."
authors = ["Peter Eacmen <peacmen@refirmlabs.com>"]
readme = 'README.rst'
repository = "https://github.com/ReFirmLabs/centrifuge-cli"
homepage = "https://www.refirmlabs.com"

keywords = ['firmware', 'security', 'centrifuge']


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
Click = "^7.0"
pandas = "^0.25.1"
dateparser = "^0.7.2"
pyyaml = "^5.3.1"
chevron = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
toml = "^0.10.1"

[tool.poetry.scripts]
centrifuge = "centrifuge_cli.main:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

